# rust-paladin-commenter

./: Cargo.toml  README.md  paladin-analysis.md  paladin-run.json
src/: cache.rs  chunk_kind.rs  chunker.rs  main.rs  main_commented.rs  ollama.rs  prompt.rs  report.rs  rewrite.rs  runlog.rs
tests/: chunker.rs
