[package]
name = "paladin-commenter"
version = "0.2.0"
edition = "2021"
description = "Context-aware code chunker and local Ollama/Gemma code commenting CLI"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
walkdir = "2"
tracing = "0.1"
tracing-subscriber = "0.3"
indicatif = "0.17"
